Updates for fixing area visibility slider
Updates for fixing area visibility slider

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -326,6 +326,53 @@ body {
     z-index: 9999;
 }
 
+.noUi-stacking .noUi-handle_text {
+	z-index:10
+}
+
+.noUi-horizontal .noUi-handle_text {
+	width:34px;
+	height:28px;
+	left:-17px;
+	top:-6px
+}
+
+.noUi-handle_text {
+    background:#FFF;
+	border:1px solid #D9D9D9;
+	border-radius:3px;
+    box-shadow:inset 0 0 1px #FFF,inset 0 1px 7px #EBEBEB,0 3px 6px -3px #BBB
+    content: none !important;
+	cursor:default;
+    position:relative;
+	z-index:1
+}
+
+.noUi-handle_text:after,..noUi-handle_text:before{
+	display:block;
+	position:absolute;
+	height:14px;
+	width:1px;
+	background:#E8E7E6;
+	left:14px;
+	top:6px
+}
+
+.noUi-handle_text:after{
+	left:17px
+}
+
+.noUi-vertical .noUi-handle_text:after,.noUi-vertical .noUi-handle_text:before{
+	width:14px;
+	height:1px;
+	left:6px;
+	top:14px
+}
+
+.noUi-vertical .noUi-handle_text:after{
+	top:17px
+}
+
 .page_header {
     font-weight: bold;
 }
